--- a/s12_cinemapedia/pubspec.yaml
+++ b/s12_cinemapedia/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
-
+# isar_version: &isar_version 3.1.0
 environment:
   sdk: '>=3.2.3 <4.0.0'
 
@@ -36,13 +36,19 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.5.1
+  flutter_staggered_grid_view: ^0.7.0
   go_router: ^14.1.3
   intl: ^0.19.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.3
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
